--- a/views/ejemplo-css.html
+++ b/views/ejemplo-css.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,34 @@
         <h2>Box model</h2>
         <div>DIV 1 Contenido</div>
         <div>DIV 2 Contenido</div>
+    </section>
+
+    <!-- Colores en CSS -->
+    <h2>Colores</h2>
+    <hr>
+    <section>
+        <h2>Colores de texto - Keywords or names</h2>
+        <p class="colores-nombre">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur nesciunt dignissimos delectus molestiae, excepturi perferendis molestias temporibus est rem, totam deleniti? Tenetur laboriosam veniam reprehenderit tempore iusto molestiae dolore dicta.</p>
+        <p class="color-rgb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem debitis eos esse iure assumenda sint perspiciatis ipsum hic fugiat? Accusamus, minus earum? Dolore sequi optio at voluptas dicta ex hic?</p>
+        <P class="color-rgba">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas ex cupiditate, fugiat accusamus fuga! Deserunt reiciendis magni mollitia quasi sapiente quaerat inventore possimus, iusto, aliquid repudiandae iure enim quidem?</P>
+        <p class="color-hsl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque? Ipsam excepturi a fugiat accusamus, enim voluptate sunt odit laboriosam nulla, omnis consectetur dolorum earum voluptatibus velit tempora porro sequi!</p>
+        <p class="color-hexadecimal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, mollitia beatae aperiam eius qui commodi iste suscipit aspernatur vero architecto, animi tempora, laudantium sit dolore quo voluptatum numquam voluptates repellendus.</p>
+    </section>
+
+    <section>
+        <h2>Colores de fondo</h2>
+        <div class="caja bg-colores-nombre">Color por nombre</div>
+        <div class="caja bg-color-rgb">Color en RGB</div>
+        <div class="caja bg-color-rgba">Color en HSL</div>
+        <div class="caja bg-color-hsl">Color en Hexadecimal</div>
+        <div class="caja bg-color-hexadecimal">Color en RGBA</div>
+    </section>
+
+    <section>
+        <h2>Fuentes</h2>
+        <hr>
+        <p class="texto-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic eius delectus atque doloremque accusamus tenetur facilis aliquid perferendis, repudiandae quibusdam deserunt maxime architecto minima maiores ducimus dignissimos quia earum corrupti.</p>
+        <p class="texto-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt adipisci repellat veniam hic eius omnis voluptas, soluta rem dolorem voluptatibus repellendus quasi impedit. Voluptatem tempora, commodi eveniet porro adipisci soluta.</p>
     </section>
 </body>
 </html>
