--- a/views/ejemplo-css.html
+++ b/views/ejemplo-css.html
@@ -42,5 +42,25 @@
         <p class="texto-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic eius delectus atque doloremque accusamus tenetur facilis aliquid perferendis, repudiandae quibusdam deserunt maxime architecto minima maiores ducimus dignissimos quia earum corrupti.</p>
         <p class="texto-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt adipisci repellat veniam hic eius omnis voluptas, soluta rem dolorem voluptatibus repellendus quasi impedit. Voluptatem tempora, commodi eveniet porro adipisci soluta.</p>
     </section>
+
+    <section>
+        <h2>Bordes</h2>
+        <hr>
+        <div class="caja-1 b-solido"></div>
+        <div class="caja-1 b-dashed"></div>
+        <div class="caja-1 b-dotted"></div>
+        <div class="caja-1 b-double"></div>
+        <div class="caja-1 b-groove"></div>    
+    </section>
+
+    <section>
+        <h2>Background - Fondo</h2>
+        <hr>
+        <div class="caja-2 bg-color"></div>
+        <div class="caja-2 bg-degrade-linear"></div>
+        <div class="caja-2 bg-degrade-radial"></div>
+        <div class="caja-2 bg-degrade-conic"></div>
+        <div class="bg-img-large"></div>
+    </section>
 </body>
 </html>
