--- a/views/layout-flexbox.html
+++ b/views/layout-flexbox.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/layout-flexbox.css">
     <title>Layout Flexbox</title>
 </head>
 <body>
-    
+    <header>
+        Contenido del Header
+    </header>
+
+    <nav>
+        Contenido de Nav
+    </nav>
+
+    <main>
+        Contenido de Main
+    </main>
+
+    <aside>
+        Contenido de Aside
+    </aside>
+
+    <footer>
+        Contenido de Footer
+    </footer>
 </body>
 </html>
