Modificacion de archivo proyectos

--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="./assets/images/codificacion.png" type="image/x-icon">
 </head>
 <body>
+    <!-- Encabezado -->
     <header id="header">
         <div class="contenedor-1">
             <div class="sub-contenedor-1">
@@ -35,18 +36,30 @@
             <div class="contenedor-opciones">
                 <a href="#header" class="opciones texto-blanco">Inicio</a>
                 <a href="../index.html" class="opciones texto-blanco">Acerca de mi</a>
-                <a href="#misProyectos" class="opciones texto-blanco">Mis proyectos</a>
-                <a href="#peliculaFavorita" class="opciones texto-blanco">Pelicula favorita</a>
-                <a href="#cancionFavorita" class="opciones texto-blanco">Cancion favorita</a>
-                <a href="#imagenes" class="opciones texto-blanco">Referencias</a>
+                <a href="#" class="opciones texto-blanco">Mis proyectos</a>                
+                <a href="../views/referencias.html" class="opciones texto-blanco">Referencias</a>
                 <a href="./views/contacto.html" class="opciones texto-blanco">Contacto</a>                
             </div>
         </nav>
     </header>
+    <!-- Fin del encabezado -->
 
     <!-- Contenido principal de la pagina -->
     <main>
         <!-- Sección Mis proyectos -->
+        <section id="acercaDeMi">
+            <div class="contenedor-info">
+                <img src="./assets/icons/informacion.png" class="icono-info" alt="Icono de información">
+            </div>
+            <div class="contenedor-info">
+                <h2 class="acerca-de-mi texto-blanco">Acerca de mi</h2>
+            </div>
+            <div class="contenedor-info">
+                <p class="descripcion-propia texto-blanco tamano-texto"><span style="color: #1FC1A2;">¡Hola Bienvenido a mi Website!</span> Soy Germán Bermúdez, aunque mis amigos y las personas más allegadas a mi me llaman <b>"Sherman"</b>, soy un Bogotano de 29 años con una pasión por el mundo digital. Como tecnólogo en Análisis y Desarrollo de Software, estoy en constante aprendizaje, actualmente inmerso en un bootcamp de desarrollo web fullstack. Mi objetivo profesional es convertirme en ingeniero de software, con especialización en gerencia de proyectos. Me considero una persona curiosa, detallista y fiel, cualidades que aplico tanto en mi vida profesional como personal. Fuera del mundo de la tecnología, me apasiona el deporte, especialmente el fútbol y el cheerleading, donde he tenido la oportunidad de participar en competencias a nivel nacional e internacional.</p>
+            </div>
+        </section>
+
+        
         <section id="misProyectos">
             <h2>Mis Proyectos</h2>
             <ul>
