--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -6,13 +6,13 @@
     <!-- Iconos de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Pagina de estilos CSS -->     
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/proyectos.css">
     <!-- Fuentes de Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Caveat:wght@400..700&family=Kulim+Park:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Outfit:wght@100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Mis proyectos - German Bermudez</title>
-    <link rel="shortcut icon" href="./assets/images/codificacion.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/maletin.png" type="image/x-icon">
 </head>
 <body>
     <!-- Encabezado -->
@@ -21,7 +21,7 @@
             <div class="sub-contenedor-1">
                 <img class="foto-perfil" src="../assets/images/perfil.jpg" alt="Foto de perfil personal German Bermudez">            
                 <h1 class="texto-blanco german-bermudez">Germán Bermúdez</h1>
-                <p class="texto-blanco desarrollador">Desarrollador de software & Web</p>
+                <p class="texto-blanco desarrollador tamano-texto">Desarrollador de software & Web</p>
                 <div class="redes-sociales">
                     <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
                     <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
@@ -34,11 +34,11 @@
         <!-- Menu de Navegación -->
         <nav class="menu-navegacion">
             <div class="contenedor-opciones">
-                <a href="#header" class="opciones texto-blanco">Inicio</a>
-                <a href="../index.html" class="opciones texto-blanco">Acerca de mi</a>
-                <a href="#" class="opciones texto-blanco">Mis proyectos</a>                
-                <a href="../views/referencias.html" class="opciones texto-blanco">Referencias</a>
-                <a href="./views/contacto.html" class="opciones texto-blanco">Contacto</a>                
+                <a href="#header" class="texto-nosubrayado texto-blanco tamano-texto">Inicio</a>
+                <a href="../index.html" class="texto-nosubrayado texto-blanco tamano-texto">Acerca de mi</a>
+                <a href="#misProyectos" class="texto-nosubrayado texto-blanco tamano-texto">Mis proyectos</a>                
+                <a href="../views/referencias.html" class="texto-nosubrayado texto-blanco tamano-texto">Referencias</a>
+                <a href="./views/contacto.html" class="texto-nosubrayado texto-blanco tamano-texto">Contacto</a>                
             </div>
         </nav>
     </header>
@@ -46,21 +46,21 @@
 
     <!-- Contenido principal de la pagina -->
     <main>
-        <!-- Sección Mis proyectos -->
-        <section id="acercaDeMi">
-            <div class="contenedor-info">
-                <img src="./assets/icons/informacion.png" class="icono-info" alt="Icono de información">
+        <!-- Sección Mis proyectos -->        
+        <section id="misProyectos">
+            <div class="contenedor-proyectos">
+                <img src="../assets/icons/portafolio.png" class="icono-portafolio" alt="Icono de mis proyectos">
             </div>
-            <div class="contenedor-info">
-                <h2 class="acerca-de-mi texto-blanco">Acerca de mi</h2>
+            <div class="contenedor-proyectos">
+                <h2 class="acerca-de-mi texto-blanco">Proyectos</h2>
             </div>
-            <div class="contenedor-info">
+            <div class="contenedor-proyectos">
                 <p class="descripcion-propia texto-blanco tamano-texto"><span style="color: #1FC1A2;">¡Hola Bienvenido a mi Website!</span> Soy Germán Bermúdez, aunque mis amigos y las personas más allegadas a mi me llaman <b>"Sherman"</b>, soy un Bogotano de 29 años con una pasión por el mundo digital. Como tecnólogo en Análisis y Desarrollo de Software, estoy en constante aprendizaje, actualmente inmerso en un bootcamp de desarrollo web fullstack. Mi objetivo profesional es convertirme en ingeniero de software, con especialización en gerencia de proyectos. Me considero una persona curiosa, detallista y fiel, cualidades que aplico tanto en mi vida profesional como personal. Fuera del mundo de la tecnología, me apasiona el deporte, especialmente el fútbol y el cheerleading, donde he tenido la oportunidad de participar en competencias a nivel nacional e internacional.</p>
             </div>
         </section>
 
         
-        <section id="misProyectos">
+        <section id="mis">
             <h2>Mis Proyectos</h2>
             <ul>
                 <li><a href="./views/ejemplo-css.html">Proyecto Practica de CSS</a></li>
@@ -73,7 +73,16 @@
     </main>
 
     <footer>
-        &copy; Todos los derechos reservados - <i>German Bermudez</i>
+        <p class="texto-blanco margen-inf-p">Mi portafolio - Website</p>
+        <p class="texto-blanco margen-inf-p">&copy; Todos los derechos reservados - <i>German Bermudez</i></p>
+        <p class="texto-blanco margen-inf-p">Politicas de privacidad - Aviso legal</p>
+        <div class="redes-sociales">
+            <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
+            <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+            <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
+        </div>
     </footer>
 </body>
 </html>
