--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -25,8 +25,8 @@
                 <div class="redes-sociales">
                     <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
                     <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
-                    <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
-                    <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+                    <a href="https://web.whatsapp.com/" target="_blank" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
                     <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
                 </div>
             </div>
@@ -52,24 +52,58 @@
                 <img src="../assets/icons/portafolio.png" class="icono-portafolio" alt="Icono de mis proyectos">
             </div>
             <div class="contenedor-proyectos">
-                <h2 class="acerca-de-mi texto-blanco">Proyectos</h2>
+                <h2 class="proyectos texto-blanco">Proyectos</h2>
             </div>
             <div class="contenedor-proyectos">
-                <p class="descripcion-propia texto-blanco tamano-texto"><span style="color: #1FC1A2;">¡Hola Bienvenido a mi Website!</span> Soy Germán Bermúdez, aunque mis amigos y las personas más allegadas a mi me llaman <b>"Sherman"</b>, soy un Bogotano de 29 años con una pasión por el mundo digital. Como tecnólogo en Análisis y Desarrollo de Software, estoy en constante aprendizaje, actualmente inmerso en un bootcamp de desarrollo web fullstack. Mi objetivo profesional es convertirme en ingeniero de software, con especialización en gerencia de proyectos. Me considero una persona curiosa, detallista y fiel, cualidades que aplico tanto en mi vida profesional como personal. Fuera del mundo de la tecnología, me apasiona el deporte, especialmente el fútbol y el cheerleading, donde he tenido la oportunidad de participar en competencias a nivel nacional e internacional.</p>
+                <p class="texto-blanco tamano-texto descripcion-proyectos"><span style="color: #1FC1A2;"> ¡Bienvenido a mi espacio de proyectos! </span>Aquí encontrarás una muestra del trabajo que he realizado a lo largo de mi experiencia académica, ofreciendo una visión de mis habilidades y mi pasión por el desarrollo web y de software. Cada proyecto refleja mi aprendizaje y la aplicación de lenguajes de programación como Java, JavaScript, PHP, lenguajes de marcado y estilos como HTML5, CSS3, Bootstrap 5, donde también he explorado el desarrollo con el framework CodeIgniter (para PHP). Estoy continuamente trabajando en la creación de nuevos proyectos para enriquecer este portafolio y mostrar mi evolución, ¡así que no dudes en volver pronto para ver las novedades y mi creciente conjunto de habilidades!</p>
             </div>
         </section>
-
+        <hr>
         
-        <section id="mis">
-            <h2>Mis Proyectos</h2>
-            <ul>
-                <li><a href="./views/ejemplo-css.html">Proyecto Practica de CSS</a></li>
-                <li><a href="./views/layout-flexbox.html">Proyecto #2</a></li>
-                <li><a href="#">Proyecto #3</a></li>
-                <li><a href="#">Poryecto #4</a></li>
-                <li><a href="#">Proyecto #5</a></li>
-            </ul>
+        <section id="proyecto1" class="proyecto1">
+            <div class="cont-prisma">
+                <img src="../assets/icons/java.png" style="width: 25px; height: 25px;" alt="Logo lenguaje de programacion JAVA">
+                <h3 class="texto-blanco">Proyecto 1 - Prisma CP</h3>
+            </div>
+            <div style="display: flex; flex-direction: row;">
+                <div class="cont-desc-proy1">
+                    <p class="texto-blanco tamano-texto margen-inf-p" >Este software fue diseñado y desarrollado específicamente para optimizar la eficiencia y la organización de los procesos clave de una empresa de imprenta. Utilizando Java como lenguaje principal en el backend y tecnologías frontend como HTML, CSS y Bootstrap para una interfaz intuitiva, Prisma - CP implementa un sistema de autenticación seguro con acceso diferenciado para roles de administrador, ejecutivo de cuenta, diseñador y operario, optimizando las tareas de cada área. Sus funcionalidades principales incluyen un control exhaustivo del inventario de materiales, la creación y visualización del estado de las órdenes de producción en tiempo real, una gestión integral de facturas de compra y venta, y un repositorio centralizado para el almacenamiento organizado de los diseños creados por el equipo de diseño, facilitando la colaboración y el flujo de trabajo.</p>
+                    <p class="texto-blanco tamano-texto" style="margin-top: 50px;"><b>Links de acceso al proyecto</b></p>
+                    <ul style="list-style-type: '★ ';">                        
+                        <li><a href="https://github.com/Shermangnr/Prisma-CP" class="texto-nosubrayado texto-blanco" target="_blank" rel="noopener noreferrer">Prisma CP - GitHub</a></li>
+                    </ul>
+                </div>
+                <div class="cont-capturas">
+                    <img src="../assets/images/capt-prisma1.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">
+                    <img src="../assets/images/capt-prisma2.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">
+                    <img src="../assets/images/capt-prisma3.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">
+                    <img src="../assets/images/capt-prisma4.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">                    
+                </div>
+            </div>            
         </section>
+        <hr>
+        <section id="proyecto2" class="proyecto2" style="margin-bottom: 20px;">
+            <div class="cont-ferreteria">
+                <img src="../assets/icons/php.png" style="width: 25px; height: 25px;" alt="Logo lenguaje de programacion PHP">
+                <h3 class="texto-blanco">Proyecto 2 - Ferreteria</h3>
+            </div>
+            <div style="display: flex; flex-direction: row-reverse;">
+                <div class="cont-desc-proy2">
+                    <p class="texto-blanco tamano-texto margen-inf-p" >Este proyecto tiene como objetivo simplificar y optimizar la administración de una ferretería a través de una aplicación web desarrollada con PHP y el framework CodeIgniter 3. Proporciona un acceso seguro mediante un sistema de autenticación por credenciales y ofrece herramientas esenciales como el control detallado del movimiento de materiales (entradas y salidas), la gestión de usuarios con la capacidad de crear nuevas cuentas, y un registro completo de los empleados. La implementación del método CRUD en cada módulo asegura una manipulación de datos eficiente y organizada. La interfaz, construida con Bootstrap, es intuitiva y adaptable a diferentes tamaños de pantalla gracias a su diseño responsive, mientras que la base de datos MySQL garantiza la integridad y disponibilidad de la información.</p>
+                    <p class="texto-blanco tamano-texto" style="margin-top: 50px;"><b>Links de acceso al proyecto</b></p>
+                    <ul style="list-style-type: '★ ';">                        
+                        <li><a href="https://github.com/Shermangnr/proyecto-ferreteria" class="texto-nosubrayado texto-blanco" target="_blank" rel="noopener noreferrer">Proyecto Ferreteria - GitHub</a></li>
+                    </ul>
+                </div>
+                <div class="cont-capturas">
+                    <img src="../assets/images/capt-ferreteria1.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">
+                    <img src="../assets/images/capt-ferreteria2.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">
+                    <img src="../assets/images/capt-ferreteria3.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">
+                    <img src="../assets/images/capt-ferreteria4.jpg" class="estilo-capturas" alt="Captura de pantalla de la aplicacion Prisma">                    
+                </div>
+            </div>            
+        </section>
+        
     </main>
 
     <footer>
