--- a/views/referencias.html
+++ b/views/referencias.html
@@ -6,21 +6,21 @@
     <!-- Iconos de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Pagina de estilos CSS -->     
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="../styles/referencias.css">
     <!-- Fuentes de Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Caveat:wght@400..700&family=Kulim+Park:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Outfit:wght@100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Referencias Personales - German Bermudez</title>
     <!-- Icono de pestaña -->
-    <link rel="shortcut icon" href="./assets/images/codificacion.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/ref-icon.png" type="image/x-icon">
 </head>
 <body>
         <!-- Encabezado -->
         <header id="header">
             <div class="contenedor-1">
                 <div class="sub-contenedor-1">
-                    <img class="foto-perfil" src="./assets/images/perfil.jpg" alt="Foto de perfil personal German Bermudez">            
+                    <img class="foto-perfil" src="../assets/images/perfil.jpg" alt="Foto de perfil personal German Bermudez">            
                     <h1 class="texto-blanco german-bermudez">Germán Bermúdez</h1>
                     <p class="texto-blanco desarrollador tamano-texto">Desarrollador de software & Web</p>
                     <div class="redes-sociales">
@@ -35,48 +35,90 @@
             <!-- Menu de Navegación -->
             <nav class="menu-navegacion">
                 <div class="contenedor-opciones">
-                    <a href="#header" class="opciones texto-blanco tamano-texto">Inicio</a>
-                    <a href="../index.html" class="opciones texto-blanco tamano-texto">Acerca de mi</a>
-                    <a href="./views/proyectos.html" class="opciones texto-blanco tamano-texto">Mis proyectos</a>                    
-                    <a href="#" class="opciones texto-blanco tamano-texto">Referencias</a>
-                    <a href="./views/contacto.html" class="opciones texto-blanco tamano-texto">Contacto</a>                
+                    <a href="#header" class="texto-nosubrayado texto-blanco tamano-texto">Inicio</a>
+                    <a href="../index.html" class="texto-nosubrayado texto-blanco tamano-texto">Acerca de mi</a>
+                    <a href="../views/proyectos.html" class="texto-nosubrayado texto-blanco tamano-texto">Mis proyectos</a>                    
+                    <a href="#" class="texto-nosubrayado texto-blanco tamano-texto">Referencias</a>
+                    <a href="../views/contacto.html" class="texto-nosubrayado texto-blanco tamano-texto">Contacto</a>                
                 </div>
             </nav>
         </header>
         <!-- Fin del encabezado -->
         
         <main>
-            <!-- Seccion Referencias personales -->
-        <section id="tablaReferencias">
-            <h2>Referencias personales</h2>
-            <p>Estas son mis referencias personales, compañeros de trabajo que pueden dar testimonio de mis trabajo y mi trayectoria profesional.</p>
+        <!-- Seccion Referencias personales -->
+        <section id="referencias">
+            <div class="contenedor-referencias">
+                <img src="../assets/icons/referencia.png" class="icono-referencias" alt="Icono de mis proyectos">
+            </div>
+            <div class="contenedor-referencias">
+                <h2 class="referencias texto-blanco">Referencias Personales</h2>
+            </div>
+            <div class="contenedor-referencias">
+                <p class="texto-blanco tamano-texto descripcion-referencias"><span style="color: #1FC1A2;"> ¡Bienvenido a mi espacio de referencias! </span>En esta sección, comparto algunas referencias personales de individuos de mi entorno social, a quienes conozco desde hace más de 15 años, así como las perspectivas de valiosos colegas que he tenido el placer de conocer y con quienes he colaborado en diversos entornos profesionales. Para ofrecer una visión completa de quién soy, sus diferentes testimonios complementan mi descripción personal y profesional, brindando una perspectiva sobre mi carácter, ética de trabajo y habilidades interpersonales.</p>
+            </div>
+        </section>
+
+        <section id="tablaReferencias" class="tabla-referencias">
+            
             <!-- Tabla de referencias personales -->
-            <table style="border: 2px solid black;">
-                <caption>Referencias de contacto</caption>
-                <thead style="border: 2px solid black;">
+            <div class="cont-tabla">                
+                <table class="tamano-texto texto-blanco">
+                    <thead>
                     <tr>
                         <th>Nombre</th>
-                        <th>Correo</th>
-                        <th>Número</th>
+                        <th>Correo Electrónico</th>
+                        <th>Teléfono</th>
                     </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Juan Perez</td>
-                        <td>juan.perez@gmail.com</td>
-                        <td>3112225555</td>
-                    </tr>
-                    <tr>
-                        <td>Maria Lopez</td>
-                        <td>maria.perez@gmail.com</td>
-                        <td>3215556666</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-
-                </tfoot>
-            </table>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Ana Pérez</td>
+                            <td>ana.perez@gmail.com</td>
+                            <td>3001234567</td>
+                        </tr>
+                        <tr>
+                            <td>Luis Gómez</td>
+                            <td>luis.gomez@gmail.com</td>
+                            <td>3119876543</td>
+                        </tr>
+                        <tr>
+                            <td>Sofía Vargas</td>
+                            <td>sofia.vargas@gmail.com</td>
+                            <td>3225551212</td>
+                        </tr>
+                        <tr>
+                            <td>Emanuel Lopez</td>
+                            <td>emanuel.lopez@gmail.com</td>
+                            <td>1234567890</td>
+                        </tr>
+                        <tr>
+                            <td>Milena Sierra</td>
+                            <td>milena.sierra@gmail.com</td>
+                            <td>9876543210</td>
+                        </tr>
+                        <tr>
+                            <td>Alba Buitrago</td>
+                            <td>alba.buitrago@gmail.com</td>
+                            <td>1122334455</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
         </main>
+
+        <footer>
+            <p class="texto-blanco margen-inf-p">Mi portafolio - Website</p>
+            <p class="texto-blanco margen-inf-p">&copy; Todos los derechos reservados - <i>German Bermudez</i></p>
+            <p class="texto-blanco margen-inf-p">Politicas de privacidad - Aviso legal</p>
+            <div class="redes-sociales">
+                <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
+                <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+                <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
+            </div>
+        </footer>
 </body>
 </html>
