Correccion de comentarios

--- a/styles/proyectos.css
+++ b/styles/proyectos.css
@@ -197,7 +197,7 @@ footer {
     margin: 15px;
 }
 
-/* Estilo para el Icono inicial de la seccion Acerca de mi */
+/* Estilo para el Icono inicial de la seccion proyectos */
 .icono-portafolio {
     width: 100%;
     display: flex;
