--- a/views/contacto.html
+++ b/views/contacto.html
@@ -3,56 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Iconos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Pagina de estilos CSS -->     
+    <link rel="stylesheet" href="../styles/contacto.css">
+    <!-- Fuentes de Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Caveat:wght@400..700&family=Kulim+Park:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Outfit:wght@100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Contacto - German Bermudez</title>
+    <!-- Icono de pestaña -->
+    <link rel="shortcut icon" href="../assets/icons/contacto.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <nav>
-            <div>
-                <a href="../index.html">Acerca de mi</a>
-                <a href="../index.html">Mis proyectos</a>
-                <a href="../index.html">Imagenes</a>
-                <a href="../index.html">Pelicula favorita</a>
-                <a href="../index.html">Cancion favorita</a>
-                <a href="#formulario">Contacto</a>                
+    <!-- Encabezado -->
+    <header id="header">
+        <div class="contenedor-1">
+            <div class="sub-contenedor-1">
+                <img class="foto-perfil" src="../assets/images/perfil.jpg" alt="Foto de perfil personal German Bermudez">            
+                <h1 class="texto-blanco german-bermudez">Germán Bermúdez</h1>
+                <p class="texto-blanco desarrollador tamano-texto">Desarrollador de software & Web</p>
+                <div class="redes-sociales">
+                    <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
+                    <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+                    <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- Menu de Navegación -->
+        <nav class="menu-navegacion">
+            <div class="contenedor-opciones">
+                <a href="#header" class="texto-nosubrayado texto-blanco tamano-texto">Inicio</a>
+                <a href="../index.html" class="texto-nosubrayado texto-blanco tamano-texto">Acerca de mi</a>
+                <a href="../views/proyectos.html" class="texto-nosubrayado texto-blanco tamano-texto">Mis proyectos</a>                    
+                <a href="../views/referencias.html" class="texto-nosubrayado texto-blanco tamano-texto">Referencias</a>
+                <a href="#" class="texto-nosubrayado texto-blanco tamano-texto">Contacto</a>                
             </div>
         </nav>
     </header>
+    <!-- Fin del encabezado -->
     
     <main>
-        <h1>Germán Bermúdez</h1>
+        <!-- Seccion Contacto -->
+        <section id="contacto" class="contacto">
+            <div class="contenedor-contacto">
+                <img src="../assets/icons/contact.png" class="icono-contacto" alt="Icono de contacto">
+            </div>
+            <div class="contenedor-contacto">
+                <h2 class="contacto texto-blanco">Contacto</h2>
+            </div>
+            <div class="contenedor-contacto">
+                <p class="texto-blanco tamano-texto descripcion-contacto"><span style="color: #1FC1A2;"> ¡Hola! ¿Listo para que hagamos magia juntos? </span> Si tienes un proyecto en mente, una pregunta o simplemente quieres saludar, ¡me encantaría escucharte! Si has llegado hasta aquí, quizás algo de mi trabajo ha capturado tu interés. Considera esta sección como el inicio de nuestra próxima gran colaboración. ¡No dudes en contactarme! Estoy ansioso por conocer tus inquietudes y explorar cómo podemos conectar. ¡Envíame un mensaje y pongamos en marcha esas ideas!</p>
+            </div>
+        </section>
+        <hr>
+        <section class="info-contacto">
+            <p class="texto-blanco tamano-texto">Estos son mis datos personales para que te pongas en contacto conmigo:</p>
+            <div class="cont-lista-contacto">
+                <ul class="margen-inf-p">
+                    <li style="list-style-type: '☏ ';" class="texto-blanco tamano-texto"><b>Telefono : </b><a href="#" class="texto-blanco texto-nosubrayado">313 4180071</a></li>
+                    <li style="list-style-type: '✉ ';" class="texto-blanco tamano-texto"><b>Correo: </b><a href="#" class="texto-blanco texto-nosubrayado">shermangnr@gmail.com</a></li>
+                    <li style="list-style-type: '🔗 ';" class="texto-blanco tamano-texto"><b>Linkedin: </b><a href="#" class="texto-blanco texto-nosubrayado">linkedin.com/german-bermudez/</a></li>
+                </ul>
+            </div>
+            <p class="tamano-texto texto-blanco">O si prefieres puedes dejarme tus datos y pronto estare en contacto contigo :)</p>
+            <div class="form">
+                <form action="" class="formulario texto-blanco tamano-texto">
+                    <label for="name">Nombres</label>
+                    <input type="text" id="name" placeholder="Nombre completo">
 
-        <section>
-            <h2>Contacto</h2>
-            <ul>
-                <li><b>Telefono: </b><a href="#">313 4180071</a></li>
-                <li><b>Correo: </b><a href="">shermangnr@gmail.com</a></li>
-                <li><b>Linkedin: </b><a href="">linkedin.com/german-bermudez/</a></li>
-            </ul>
+                    <label for="email">Correo</label>
+                    <input type="email" id="email" placeholder="tucorreo@ejemplo.com">
+
+                    <label for="message">Mensaje</label>
+                    <textarea name="message" id="message" placeholder="Deja aquí tu mensaje ..."></textarea>
+
+                    <button type="submit"  class="texto-blanco tamano-texto">Enviar</button>
+                </form>
+            </div>
         </section>            
-
-        <section id="formulario">
-            <h2>Contacto</h2>
-            <p>Para que estemos en contacto por favor deja tus datos y un mensaje. Estaremos pronto en comunicación.</p>
-            <form action="">
-                <label for="name">Nombre</label>
-                <input type="text" id="name" placeholder="Nombre completo">
-        
-                <label for="email">Correo</label>
-                <input type="email" id="email" placeholder="Correo contacto">
-        
-                <label for="mensaje">Mensaje</label>
-                <textarea name="" id="mensaje" placeholder="Escriba aquí su mensaje"></textarea>
-        
-                <button type="submit">Enviar</button>
-            </form>
-        </section>                
     </main>
     <br>
     <br>
     <br>
     <footer>
-        &copy; Todos los derechos reservados - <i>German Bermudez</i>
+        <p class="texto-blanco margen-inf-p">Mi portafolio - Website</p>
+        <p class="texto-blanco margen-inf-p">&copy; Todos los derechos reservados - <i>German Bermudez</i></p>
+        <p class="texto-blanco margen-inf-p">Politicas de privacidad - Aviso legal</p>
+        <div class="redes-sociales">
+            <a href="https://www.linkedin.com/in/german-bermudez/" target="_blank" class="decoracion-icono"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="decoracion-icono"><i class="bi bi-facebook"></i></a>
+            <a href="https://web.whatsapp.com/" class="decoracion-icono"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.instagram.com/" class="decoracion-icono"><i class="bi bi-instagram"></i></a>
+            <a href="https://github.com/Shermangnr" target="_blank" class="decoracion-icono"><i class="bi bi-github"></i></a>
+        </div>
     </footer>
 
 </body>
