Correccion de enlaces para el menu de navegacion

--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -38,7 +38,7 @@
                 <a href="../index.html" class="texto-nosubrayado texto-blanco tamano-texto">Acerca de mi</a>
                 <a href="#misProyectos" class="texto-nosubrayado texto-blanco tamano-texto">Mis proyectos</a>                
                 <a href="../views/referencias.html" class="texto-nosubrayado texto-blanco tamano-texto">Referencias</a>
-                <a href="./views/contacto.html" class="texto-nosubrayado texto-blanco tamano-texto">Contacto</a>                
+                <a href="../views/contacto.html" class="texto-nosubrayado texto-blanco tamano-texto">Contacto</a>                
             </div>
         </nav>
     </header>
